--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#footer" class="brand-logo">Dean Warren</a>
       <ul class="right hide-on-med-and-down">
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" target="_blank" rel="noopener" href="https://www.twitter.com/deawar" style="margin-top:10px;">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" target="_blank" rel="nopener noreferrer" href="https://www.twitter.com/deawar" style="margin-top:10px;">
           <span class="fa fa-twitter" style="color:rgb(0, 47, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/dean-warren-ab01468/" style="margin-top:10px;">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" target="_blank" rel="nopener noreferrer" href="https://www.linkedin.com/in/dean-warren-ab01468/" style="margin-top:10px;">
           <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" target="_blank" rel="noopener" href="https://www.github.com/deawar" style="margin-top:10px;">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" target="_blank" rel="nopener noreferrer" href="https://www.github.com/deawar" style="margin-top:10px;">
           <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" target="_blank" rel="noopener" href="https://www.reddit.com/user/deawar" style="margin-top:10px;">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" target="_blank" rel="nopener noreferrer" href="https://www.reddit.com/user/deawar" style="margin-top:10px;">
           <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
         </a></i></li>
         <li class="nav-item">
@@ -39,16 +39,16 @@
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" target="_blank" rel="noopener" href="https://www.twitter.com/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-twitter" target="_blank" rel="nopener noreferrer" href="https://www.twitter.com/deawar">
           <span class="fa fa-twitter" style="color:rgb(0, 153, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/dean-warren-ab01468/">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-linkedin" target="_blank" rel="nopener noreferrer" href="https://www.linkedin.com/in/dean-warren-ab01468/">
           <span class="fa fa-linkedin" style="color:rgb(0, 68, 255);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" target="_blank" rel="noopener" href="https://www.github.com/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-github" target="_blank" rel="nopener noreferrer" href="https://www.github.com/deawar">
           <span class="fa fa-github" style="color:rgb(240, 242, 247);" ></span>
         </a></i></li>
-        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" target="_blank" rel="noopener" href="https://www.reddit.com/user/deawar">
+        <li class="nav-item">  <a class="btn btn-block btn-social btn-reddit" target="_blank" rel="nopener noreferrer" href="https://www.reddit.com/user/deawar">
           <span class="fa fa-reddit" style="color:rgb(238, 73, 8);" ></span>
         </a></i></li>
         <li class="nav-item">
@@ -116,7 +116,7 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">enhanced_encryption</i></h2>
             <h5 class="center">JavaScript Password Generator</h5>
-            <a target="_blank" rel="noopener" href="https://deawar.github.io/jspassword_generator/"><img src="./Assets/Images/jspasswordgen.webp" width="380" height="380" alt="Password Generator" class="responsive">
+            <a target="_blank" rel="nopener noreferrer" href="https://deawar.github.io/jspassword_generator/"><img src="./Assets/Images/jspasswordgen.webp" width="380" height="380" alt="Password Generator" class="responsive">
             <span class="d-block p-1 rounded bg-dark text-white"></a><a
               href="https://github.com/deawar/jspassword_generator" class="text-light">GitHub Repo</a></span>
             <p class="light">Have you ever needed to generate a random password with multiple charaters for your favorite website? This app can do that for you quickly and easily. Additionally, there is a convienent Copy button once you have a password that meets your needs.</p>
@@ -127,8 +127,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Work Day Scheduler</h5>
-            <a target="_blank" rel="noopener" href="https://deawar.github.io/Work-DayScheduler/"><img src="./Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/Work-DayScheduler"
+            <a target="_blank" rel="nopener noreferrer" href="https://deawar.github.io/Work-DayScheduler/"><img src="./Assets/Images/05-third-party-apis-homework-demo.gif" width="380" height="380" alt="WorkDay Scheduler" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/Work-DayScheduler"
               class="text-light">GitHub Repo</a></span>
             <p class="light">The Work Day Scheduler Application makes planning your day a breeze. This timed ToDo app will help you get a handle on your day by breaking up your tasklist into an hourly schedule.</p>
             
@@ -139,8 +139,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">wb_sunny</i></h2>
             <h5 class="center">RainChk</h5>
-            <a target="_blank" rel="noopener" href="https://itsjonkelley.github.io/RainChk/"><img src="./Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/itsjonkelley/RainChk"
+            <a target="_blank" rel="nopener noreferrer" href="https://itsjonkelley.github.io/RainChk/"><img src="./Assets/Images/RainChk.gif" width="380" height="380" alt="RainChk Scheduler assist with planning while making sure the weather is considered." class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/itsjonkelley/RainChk"
               class="text-light">GitHub Repo</a></span>
               <p class="light">RainChk Scheduler assists with planning while making sure the weather is considered.</p>
           </div>
@@ -151,8 +151,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">MultiCityWeather</h5>
-            <a target="_blank" rel="noopener" href="https://deawar.github.io/MultiCityWeather/"><img src="./Assets/Images/MultiCityWeather.webp" width="380" height="380" alt="MultiCityWeather" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/MultiCityWeather" class="text-light">GitHub Repo</a></span>
+            <a target="_blank" rel="nopener noreferrer" href="https://deawar.github.io/MultiCityWeather/"><img src="./Assets/Images/MultiCityWeather.webp" width="380" height="380" alt="MultiCityWeather" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/MultiCityWeather" class="text-light">GitHub Repo</a></span>
             <p class="light">Have you ever needed to see what the weather will be like in several cities in a given week? Well this is what MultiCityWeather was designed for. This app can do that for you quickly and easily.</p>
           </div>
         </div>
@@ -161,8 +161,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">code</i></h2>
             <h5 class="center">Node JS CLI ReadMeGen</h5>
-            <a target="_blank" rel="noopener" href="https://github.com/deawar/readMeGen/"><img src="./Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/readMeGen/"
+            <a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/readMeGen/"><img src="./Assets/Images/ReadMeGen.gif" width="380" height="380" alt="CLI ReadMe Generator" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/readMeGen/"
               class="text-light">GitHub Repo</a></span>
             <p class="light">A tool for the busy developer, ReadMe Gen is a Node JS CLI tool to quickly render a ReadMe to include in your GitHub repository that will include your collaborators, module dependencies, and include at least one badge in your ReadMe. This program will also prompt you for a license for your project.</p>
           </div>
@@ -172,8 +172,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">assignment</i></h2>
             <h5 class="center">Web Based NoteTaker</h5>
-            <a target="_blank" rel="noopener" href="https://still-headland-57233.herokuapp.com/"><img src="./Assets/Images/noteTaker.webp" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/noteTaker"
+            <a target="_blank" rel="nopener noreferrer" href="https://still-headland-57233.herokuapp.com/"><img src="./Assets/Images/noteTaker.webp" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/noteTaker"
               class="text-light">GitHub Repo</a></span>
             <p class="light">Another Node JS based tool that allows the busy user to make notes available anywhere on their local network.This app uses persistent storage to keep track of the user's information.</p>
           </div>
@@ -186,8 +186,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">fitness_center</i></h2>
             <h5 class="center">Fitness Tracker</h5>
-            <a target="_blank" rel="noopener" href="https://cryptic-tor-43629.herokuapp.com/"><img src="./Assets/Images/FitnessTracker8mb.gif" width="380" height="380" alt="Fitness Tracker" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/WorkOutTracker" class="text-light">GitHub Repo</a></span>
+            <a target="_blank" rel="nopener noreferrer" href="https://cryptic-tor-43629.herokuapp.com/"><img src="./Assets/Images/FitnessTracker8mb.gif" width="380" height="380" alt="Fitness Tracker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/WorkOutTracker" class="text-light">GitHub Repo</a></span>
             <p class="light">A basic full stack app that uses Mongo DB and Mongoose. Built in Node JS and deployed on Heroku.</p>
           </div>
         </div>
@@ -196,8 +196,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">food_bank</i></h2>
             <h5 class="center">Da MVC Burger App!</h5>
-            <a target="_blank" rel="noopener" href="https://da-burger-app2020.herokuapp.com/"><img src="./Assets/Images/Da MVC Burger App!_.gif" width="380" height="380" alt="Da MVC Burger App!" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/deawar/DaBurgerApp"
+            <a target="_blank" rel="nopener noreferrer" href="https://da-burger-app2020.herokuapp.com/"><img src="./Assets/Images/Da MVC Burger App!_.gif" width="380" height="380" alt="Da MVC Burger App!" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/deawar/DaBurgerApp"
               class="text-light">GitHub Repo</a></span>
             <p class="light">This fun, app demonstrates MVC principles and uses MySQL as a back-end. Plus, just look at the fun creative front-end interface. This learning project was a MySQL learning bonanza!</p>
           </div>
@@ -207,8 +207,8 @@
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">brush</i></h2>
             <h5 class="center">Silent Auction Gallary</h5>
-            <a target="_blank" rel="noopener" href="https://silentauctiongallery.herokuapp.com/"><img src="./Assets/Images/SilentAuctionGallery-min.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
-            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="noopener" href="https://github.com/ankmud01/SilentAuctionGallery"
+            <a target="_blank" rel="nopener noreferrer" href="https://silentauctiongallery.herokuapp.com/"><img src="./Assets/Images/SilentAuctionGallery-min.gif" width="380" height="380" alt="Web Based NoteTaker" class="responsive">
+            <span class="d-block p-1 rounded bg-dark text-white"></a><a target="_blank" rel="nopener noreferrer" href="https://github.com/ankmud01/SilentAuctionGallery"
               class="text-light">GitHub Repo</a></span>
             <p class="light">Node JS based tool that allows the busy user to make notes available anywhere on their local network.This app uses persistent storage to keep track of the user's information.</p>
           </div>
@@ -225,7 +225,7 @@
           <h5 class="header col s12 light">Dean is a Full Stack Developer ready to build your next "Killer Application".</h5>
         </div>
         <div class="row center">
-          <a target="_blank" rel="noopener" href="./Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1 hoverable">See Resume</a>
+          <a target="_blank" rel="nopener noreferrer" href="./Assets/Dean WarrenResumeApr30.pdf" id="download-button" class="btn-large waves-effect waves-light teal lighten-1 hoverable">See Resume</a>
         </div>
       </div>
     </div>
@@ -254,7 +254,7 @@
         <div class="col l3 s12">
           <h5 class="white-text" id="footer">Connect</h5>
           <ul>
-            <li><a target="_blank" rel="noopener" class="white-text" href="https://www.ssccbogart.info">www.ssccbogart.info</a></li>
+            <li><a target="_blank" rel="nopener noreferrer" class="white-text" href="https://www.ssccbogart.info">www.ssccbogart.info</a></li>
             <li><a class="white-text" href="mailTo:deawar@gmail.com">Email</a></li>
             <li><a class="white-text" href="tel: +1-706-521-4154">Phone: 706-521-4154</a></li>
             <!-- <li><a class="white-text" href="#!">Link 4</a></li> -->
